plugins {
    id 'java'
}

group = 'xyz.chener.ext.napt.server'
version = '1.0-SNAPSHOT'

java{
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

dependencies {
    implementation 'com.baomidou:mybatis-plus:3.5.5'
    implementation 'com.baomidou:mybatis-plus-extension:3.5.3.1'
    implementation 'org.springframework:spring-core:6.1.3'
    implementation 'com.alibaba:druid:1.2.21'

    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    implementation 'io.netty:netty-all:4.1.106.Final'
    implementation 'org.slf4j:slf4j-api:2.0.11'
    implementation 'ch.qos.logback:logback-classic:1.4.14'
    implementation 'com.h2database:h2:2.2.224'


    implementation 'com.google.protobuf:protobuf-java:3.25.2'

    implementation('com.fasterxml.jackson.core:jackson-databind:2.16.1')
    implementation 'io.javalin:javalin:5.6.3'
}

jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    manifest {
        attributes(
                "Manifest-Version": 1.0,
                'Main-Class': 'xyz.chener.ext.napt.server.Main'
        )
    }


    from {
        configurations.runtimeClasspath.collect { it.isDirectory()? it:zipTree(it) }
    }
}